# stm32f4-cmake

./: compile.sh  flash.sh
cmake/: FindCMSIS.cmake  FindSTM32HAL.cmake  gcc_stm32.cmake  gcc_stm32f4.cmake
stm32f4-led/: CMakeLists.txt
